# viber-alerts

./: Cargo.toml  Procfile  README.md  RustConfig
migrations/2018-11-09-190120_create_posts/: up.sql
migrations/2018-11-24-020523_create_users/: up.sql
src/: main.rs  models.rs  schema.rs
src/api/: auth.rs  mod.rs
src/bitcoin/: mod.rs  types.rs
src/client/: mod.rs
src/common/: messages.rs  mod.rs
src/config/: mod.rs
src/dark_sky/: mod.rs
src/scheduler/: mod.rs
src/viber/: messages.rs  mod.rs  raw.rs
src/weather/: mod.rs
src/workers/: db.rs  mod.rs
templates/: base.html  index.html  login.html  oauth_login.html
