[package]
name = "viber_alerts"
version = "0.1.0"

[dependencies]
toml = "*"
actix = "0.7"
actix-web = {version = "^0.7" , features=["alpn"] }
futures = "0.1"
env_logger = "0.5"
bytes = "0.4"
dirs = "1.0.4"
serde_json = "1.0.*"
serde = "1.0.71"
serde_derive = "*"
json = "*"
log = "0.4.*"
reqwest = "0.9.*"
chrono = "0.4.*"
failure = "0.1.*"
victoria-dom = "0.1"
openssl = "0.10.11"
forecast = "2.0.0"
tera = "0.11.19"
diesel = { version = "^1.3.3", features = ["postgres", "r2d2"] }
r2d2 = "0.8.3"
uuid = { version = "0.5", features = ["serde", "v4"] }